--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "stdio.h": "c",
         "string.h": "c",
-        "windows.h": "c"
+        "windows.h": "c",
+        "*.jfif": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
